Version 7.5.4 (18.01.2025) - ADDED: A button to finalize round manually - ADDED: A number of jumpships for DC and LA (test) - REMOVED: Automatic finalize round